test/functions/diten/paramFormalDefaultNotParamError.good
paramFormalDefaultNotParamError.chpl:2: error: default value for param formal is not a param
