test/functions/diten/paramFormalDefaultNotParamError.chpl
proc notParam(x) do return x;
proc f(param p = notParam(1)) { }

f();
